[gd_scene load_steps=5 format=3 uid="uid://bxglp6e2xq2r7"]

[ext_resource type="Script" uid="uid://bd23rk21snlwn" path="res://Main.gd" id="1_r6ksj"]
[ext_resource type="Texture2D" uid="uid://b11m8fw2showh" path="res://assets/notification-scheduler-android.png" id="2_7rmrj"]
[ext_resource type="Texture2D" uid="uid://bvfau1jubfqcm" path="res://assets/notification-scheduler-ios.png" id="3_cm0pq"]
[ext_resource type="Script" uid="uid://dksl1q3dxc2a2" path="res://addons/NotificationSchedulerPlugin/NotificationScheduler.gd" id="3_guixi"]

[node name="Main" type="Node"]
script = ExtResource("1_r6ksj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AndroidTextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("2_7rmrj")
expand_mode = 3
stretch_mode = 5

[node name="iOSTextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("3_cm0pq")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Notification Scheduler Demo"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delay (s): "

[node name="DelayHSlider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0
exp_edit = true
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="IntervalHBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="IntervalCheckBox" type="CheckBox" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer"]
layout_mode = 2
text = "Interval (s):"

[node name="IntervalHSlider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 60.0
max_value = 1000.0
value = 60.0
exp_edit = true
rounded = true
tick_count = 10

[node name="ValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="BadgeCountHBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeCountHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeCountHBoxContainer"]
layout_mode = 2
text = "Badge Count: "

[node name="BadgeCountHSlider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeCountHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 20.0
tick_count = 8
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeCountHBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="RestartCheckBox" type="CheckBox" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upon notification opened, restart app if running"

[node name="PermissionButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Request Notification Permission"

[node name="ActionHBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 26

[node name="MenuButton" type="MenuButton" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/ActionHBoxContainer"]
layout_mode = 2
text = "Notification ID v"
item_count = 10
popup/item_0/text = "1"
popup/item_0/id = 1
popup/item_1/text = "2"
popup/item_1/id = 2
popup/item_2/text = "3"
popup/item_2/id = 3
popup/item_3/text = "4"
popup/item_3/id = 4
popup/item_4/text = "5"
popup/item_4/id = 5
popup/item_5/text = "6"
popup/item_5/id = 6
popup/item_6/text = "7"
popup/item_6/id = 7
popup/item_7/text = "8"
popup/item_7/id = 8
popup/item_8/text = "9"
popup/item_8/id = 9
popup/item_9/text = "10"
popup/item_9/id = 10

[node name="IdValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/ActionHBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="SendButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/ActionHBoxContainer"]
layout_mode = 2
text = "Send"

[node name="CancelButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/ActionHBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="NotificationScheduler" type="Node" parent="."]
script = ExtResource("3_guixi")

[connection signal="value_changed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/DelayHSlider" to="." method="_on_delay_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer/IntervalHSlider" to="." method="_on_interval_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeCountHBoxContainer/BadgeCountHSlider" to="." method="_on_badge_count_h_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/PermissionButton" to="." method="_on_permission_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/ActionHBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/ActionHBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="initialization_completed" from="NotificationScheduler" to="." method="_on_notification_scheduler_initialization_completed"]
[connection signal="notification_dismissed" from="NotificationScheduler" to="." method="_on_notification_scheduler_notification_dismissed"]
[connection signal="notification_opened" from="NotificationScheduler" to="." method="_on_notification_scheduler_notification_opened"]
[connection signal="permission_denied" from="NotificationScheduler" to="." method="_on_notification_scheduler_permission_denied"]
[connection signal="permission_granted" from="NotificationScheduler" to="." method="_on_notification_scheduler_permission_granted"]
